[package]
name = "lightchat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }

reqwest = { version = "0.11", features = ["cookies", "json"] }
reqwest_cookie_store = "0.5"
scraper = "0.16"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

tui = "0.19"
crossterm = "0.26"
tui-textarea = "0.2"

thiserror = "1.0"
cli-clipboard = "0.4"
